Mac: Don't explicitly set high contrast appearances when forcing appearance

Despite these being perfectly kosher appearance names, the system returns
nil when you set them, which inadvertently turns on dark mode for high
contrast users if their system is in Mojave dark mode.

Since most of our high contrast interventions are at the views level,
regular Aqua appearance will do temporarily.

Bug: 913503
Change-Id: I13238eac68d2dfa4a0d4c828bdd3e98d37d0505a
Reviewed-on: https://chromium-review.googlesource.com/c/1374437
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#616673}
Former-commit-id: 0da801c32687733e8d0e043e42f621abac157df6