base/mac/sdk_forward_declarations.h
@@ -357,10 +357,6 @@ typedef NSString* NSAppearanceName;
 @end
 
 BASE_EXPORT extern NSAppearanceName const NSAppearanceNameDarkAqua;
-BASE_EXPORT extern NSAppearanceName const
-    NSAppearanceNameAccessibilityHighContrastDarkAqua;
-BASE_EXPORT extern NSAppearanceName const
-    NSAppearanceNameAccessibilityHighContrastAqua;
 
 #endif
 
